--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Zhao-Null/simple-state-management#readme",
   "dependencies": {
+    "jest": "^26.6.3",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
