--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,12 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@types/node": "^14.14.41"
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.41",
+    "babel-jest": "^26.6.3",
+    "ts-jest": "^26.5.5"
   }
 }
