--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "statemanagement",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Zhao-Null/simple-state-management.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Zhao-Null/simple-state-management/issues"
-  },
-  "homepage": "https://github.com/Zhao-Null/simple-state-management#readme",
-  "dependencies": {
-    "jest": "^26.6.3",
-    "typescript": "^4.2.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.41",
-    "babel-jest": "^26.6.3",
-    "ts-jest": "^26.5.5"
-  }
+    "name": "statemanagement",
+    "version": "0.0.1",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Zhao-Null/simple-state-management.git"
+    },
+    "author": "",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Zhao-Null/simple-state-management/issues"
+    },
+    "homepage": "https://github.com/Zhao-Null/simple-state-management#readme",
+    "dependencies": {},
+    "devDependencies": {
+        "jest": "^26.6.3",
+        "typescript": "^4.2.4",
+        "@babel/core": "^7.13.16",
+        "@babel/preset-env": "^7.13.15",
+        "@babel/preset-typescript": "^7.13.0",
+        "@types/jest": "^26.0.22",
+        "@types/node": "^14.14.41",
+        "babel-jest": "^26.6.3",
+        "rollup": "^2.45.2",
+        "ts-jest": "^26.5.5"
+    }
 }
