--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "name": "statemanagement",
     "version": "0.0.1",
     "description": "",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "test:watch": "npm test -- --watch",
+        "test:cov": "npm test -- --coverage",
+        "build": "rollup -c"
     },
     "repository": {
         "type": "git",
@@ -18,15 +21,18 @@
     "homepage": "https://github.com/Zhao-Null/simple-state-management#readme",
     "dependencies": {},
     "devDependencies": {
-        "jest": "^26.6.3",
-        "typescript": "^4.2.4",
         "@babel/core": "^7.13.16",
         "@babel/preset-env": "^7.13.15",
         "@babel/preset-typescript": "^7.13.0",
+        "@rollup/plugin-babel": "^5.3.0",
+        "@rollup/plugin-node-resolve": "^11.2.1",
         "@types/jest": "^26.0.22",
         "@types/node": "^14.14.41",
         "babel-jest": "^26.6.3",
+        "jest": "^26.6.3",
         "rollup": "^2.45.2",
-        "ts-jest": "^26.5.5"
+        "rollup-plugin-typescript2": "^0.30.0",
+        "ts-jest": "^26.5.5",
+        "typescript": "^4.2.4"
     }
 }
