--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "statemanagement",
     "version": "0.0.1",
     "description": "",
-    "main": "src/index.js",
     "scripts": {
         "test": "jest",
         "test:watch": "npm test -- --watch",
@@ -14,6 +13,9 @@
         "url": "git+https://github.com/Zhao-Null/simple-state-management.git"
     },
     "author": "",
+    "main": "lib/SMU.js",
+    "module": "es/SMU.js",
+    "types": "types/index.d.ts",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/Zhao-Null/simple-state-management/issues"
