--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "main": "lib/SMU.js",
     "module": "es/SMU.js",
     "types": "types/index.d.ts",
+    "unpkg": "dist/SMU.js",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/Zhao-Null/simple-state-management/issues"
@@ -28,11 +29,13 @@
         "@babel/preset-typescript": "^7.13.0",
         "@rollup/plugin-babel": "^5.3.0",
         "@rollup/plugin-node-resolve": "^11.2.1",
+        "@rollup/plugin-replace": "^2.4.2",
         "@types/jest": "^26.0.22",
         "@types/node": "^14.14.41",
         "babel-jest": "^26.6.3",
         "jest": "^26.6.3",
         "rollup": "^2.45.2",
+        "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.30.0",
         "ts-jest": "^26.5.5",
         "typescript": "^4.2.4"
