--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "test": "jest",
         "test:watch": "npm test -- --watch",
         "test:cov": "npm test -- --coverage",
+        "check-types": "tsc --noEmit",
         "build": "rollup -c"
     },
     "repository": {
