--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,10 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
@@ -37,10 +41,10 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Install dependencies
-        run: npm ci
+        run: npm 
         
       - name: Check types
-        run: npm run check-types
+        run: npm check-types
         
       - name: Run test suite
         run: npm test
