--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Install dependencies
-        run: npm 
+        run: npm ci
         
       - name: Check types
         run: npm check-types
