--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ssmutil",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "a simple state management library",
     "scripts": {
         "clean": "rimraf lib dist es coverage types",
@@ -15,10 +15,10 @@
         "url": "git+https://github.com/secret344/simple-state-management.git"
     },
     "author": "secret344 (https://github.com/secret344)",
-    "main": "lib/SMU.js",
-    "module": "es/SMU.js",
+    "main": "lib/ssmutil.js",
+    "module": "es/ssmutil.js",
     "types": "types/index.d.ts",
-    "unpkg": "dist/SMU.js",
+    "unpkg": "dist/ssmutil.js",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/secret344/simple-state-management/issues"
